lib/bombadil-browser/src/instrumentation/snapshots/bombadil_browser__instrumentation__js__tests__instrument_source_code_ternary_assignment.snap
---
source: lib/bombadil-browser/src/instrumentation/js.rs
expression: code
---
window.__bombadil__ = window.__bombadil__ || {
    edges_previous: new Uint8Array(65536),
    edges_current: new Uint8Array(65536),
    previous: 0,
};
let x;
function example(a, b, c) {
	return a ? (__bombadil__.edges_current[((0x76be999e3e25b400 ^ __bombadil__.previous) >>> 0) % 65536] += 1, __bombadil__.previous = 0x76be999e3e25b400 >> 1, console.log(x), x = b) : (__bombadil__.edges_current[((0x7359aa1156ce8800 ^ __bombadil__.previous) >>> 0) % 65536] += 1, __bombadil__.previous = 0x7359aa1156ce8800 >> 1, console.log(x), x = c);
}
console.log(example(true, 1, 2), x);
